test_assets/environment-operator.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: environment-operator
  name: environment-operator
  namespace: nodejs-hello-world-app 
spec:
  replicas: 1
  selector:
    matchLabels:
      name: environment-operator
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: environment-operator
      name: environment-operator
    spec:
      containers:
      - name: environment-operator
        image: bsomogyi/environment-operator:5da770527f5f9d2c0254cbecb54fcd792e710ee9
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1000
        volumeMounts:
        - name: "auth-token"
          mountPath: "/etc/auth"
          readOnly: true
        - name: "git-key"
          mountPath: "/etc/git"
          readOnly: true
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      volumes:
      - name: "auth-token"
        secret:
          secretName: "auth-token-file"
      - name: "git-key"
        secret:
          secretName: "git-private-key"
