test_assets/simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-pod
  namespace: test-namespace-dev
spec:
  containers:
  - name: nginx
    image: nginx:1.7.9
    ports:
    - containerPort: 80
