test_assets/environment-operator-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: environment-operator
  name: environment-operator
  namespace: nodejs-hello-world-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    name: environment-operator
