test_assets/ingress.nohost.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  generation: 5
  labels:
    httpsBackend: "true"
    httpsOnly: "true"
    ssl: "true"
  name: ingress-host-test
  namespace: kube-system
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: ingress-host-test
          servicePort: 8543
        path: /
status:
  loadBalancer: {}
